INCLUDE_DIRECTORIES(${WT_SOURCE_DIR}/src)

ADD_EXECUTABLE(fuzz-css  fuzz-css.C)
ADD_EXECUTABLE(fuzz-eval fuzz-eval.C)
ADD_EXECUTABLE(fuzz-json fuzz-json.C)
ADD_EXECUTABLE(fuzz-uri  fuzz-uri.C)
ADD_EXECUTABLE(fuzz-xml  fuzz-xml.C)

TARGET_LINK_LIBRARIES(fuzz-css  PRIVATE wt $ENV{LIB_FUZZING_ENGINE})
TARGET_LINK_LIBRARIES(fuzz-eval PRIVATE wt $ENV{LIB_FUZZING_ENGINE})
TARGET_LINK_LIBRARIES(fuzz-json PRIVATE wt $ENV{LIB_FUZZING_ENGINE})
TARGET_LINK_LIBRARIES(fuzz-uri  PRIVATE wt $ENV{LIB_FUZZING_ENGINE})
TARGET_LINK_LIBRARIES(fuzz-xml  PRIVATE wt $ENV{LIB_FUZZING_ENGINE})
